bug fix: batched caching the jacobians and biases (caused memory overflow >> corrupted npz files) -- more results with precision @ 5

--- a/scan-for-best/scan_p17.ipynb
+++ b/scan-for-best/scan_p17.ipynb
@@ -24,6 +24,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file = np.load(\n",
+    "    # \"gpt-j/P17/jacobian_calculations__all_sub_toks__P17__layer_15.npz\",\n",
+    "    \"gpt2-xl/P103/jacobian_calculations__all_sub_toks__P103__layer_25.npz\",\n",
+    "    allow_pickle= True,\n",
+    ")[\"jacobians\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
