Updated eval notebook.

--- a/notebooks/eval.ipynb
+++ b/notebooks/eval.ipynb
@@ -15,6 +15,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "73b50a8b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!nvidia-smi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "ccd95185",
    "metadata": {},
    "outputs": [],
@@ -92,15 +102,8 @@
     "from torch.utils.data import DataLoader\n",
     "from tqdm.auto import tqdm\n",
     "\n",
-    "h_layer = 15\n",
-    "z_layer = model.config.n_layer - 1\n",
-    "\n",
-    "h_layername = f\"transformer.h.{h_layer}\"\n",
-    "z_layername = f\"transformer.h.{z_layer}\"\n",
-    "\n",
     "preds_by_relation = defaultdict(list)\n",
-    "h_by_relation = defaultdict(list)\n",
-    "z_by_relation = defaultdict(list)\n",
+    "logp_by_relation = defaultdict(list)\n",
     "with counterfact.formatted_as(\"torch\"):\n",
     "    loader = DataLoader(counterfact, batch_size=32, shuffle=False)\n",
     "    for batch in tqdm(loader):\n",
@@ -108,33 +111,24 @@
     "            batch[\"prompt\"],\n",
     "            return_tensors=\"pt\",\n",
     "            padding=\"longest\",\n",
-    "            return_offsets_mapping=True\n",
     "        ).to(device)\n",
-    "        offset_mapping = inputs.pop(\"offset_mapping\")\n",
     "        with torch.inference_mode():\n",
-    "            with baukit.TraceDict(model, (h_layername, z_layername)) as ret:\n",
-    "                outputs = model(**inputs)\n",
+    "            outputs = model(**inputs)\n",
     "\n",
     "        batch_idx = torch.arange(len(batch[\"prompt\"]))\n",
     "        prompt_idx = inputs.attention_mask.sum(dim=-1) - 1\n",
-    "        ids = outputs.logits[batch_idx, prompt_idx].topk(dim=-1, k=5).indices\n",
+    "        topk = torch.log_softmax(outputs.logits, dim=-1)[batch_idx, prompt_idx].topk(dim=-1, k=5)\n",
+    "        ids = topk.indices\n",
+    "        logps = topk.values\n",
     "        tokens = tokenizer_utils.batch_convert_ids_to_tokens(ids.tolist(), tokenizer)\n",
     "\n",
-    "        for i, (rid, entity, prompt, preds, h, z) in enumerate(zip(\n",
+    "        for rid, preds, logp in zip(\n",
     "            batch[\"source\"][\"requested_rewrite\"][\"relation_id\"],\n",
-    "            batch[\"entity\"],\n",
-    "            batch[\"prompt\"],\n",
     "            tokens,\n",
-    "            ret[h_layername].output[0],\n",
-    "            ret[z_layername].output[0],\n",
-    "        )):\n",
-    "            _, entity_j = tokenizer_utils.find_token_range(\n",
-    "                prompt,\n",
-    "                entity, \n",
-    "                offset_mapping=offset_mapping[i])\n",
+    "            logps.cpu(),\n",
+    "        ):\n",
     "            preds_by_relation[rid].append(preds)\n",
-    "            h_by_relation[rid].append(h[entity_j - 1].cpu())\n",
-    "            z_by_relation[rid].append(z[prompt_idx[i].item()].cpu())"
+    "            logp_by_relation[rid].append(logp)"
    ]
   },
   {
@@ -154,48 +148,117 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from relations import estimate\n",
+    "from collections import defaultdict\n",
+    "\n",
+    "import estimate\n",
     "\n",
     "layer = 15\n",
+    "n_train = 5\n",
+    "n_test = 50\n",
     "\n",
-    "accs_by_relation = {}\n",
+    "\n",
+    "relation_templates = {\n",
+    "    \"P103\": \"{} speaks the language of\",\n",
+    "    \"P140\": \"{} follows the religion of\",\n",
+    "    \"P740\": \"{} originates from\",\n",
+    "    \"P190\": \"{} has a sister city named \\\"\",\n",
+    "    \"P178\": \"{} was originally developed by\",\n",
+    "    \"P176\": \"{} is developed by the company\",\n",
+    "    \"P413\": \"In their sport, {} plays the position of\",\n",
+    "    \"P39\": \"{} has the occupation of\",\n",
+    "    \"P407\": \"{} was written in the language of\",\n",
+    "    \"P101\": \"{} works in the field of\",\n",
+    "    \"P1412\": \"{} speaks the language of\",\n",
+    "    \"P27\": \"{} is originally from the country of\",\n",
+    "    \"P106\": \"{} has the occupation of\",\n",
+    "    \"P136\": \"{} is most commonly associated with the genre of\",\n",
+    "    \"P159\": \"{} is based in the city of\",\n",
+    "    \"P276\": \"{} is located in the city of\",\n",
+    "}\n",
+    "\n",
+    "\n",
+    "accs_by_relation = defaultdict(dict)\n",
     "for rid, samples in samples_by_relation.items():\n",
     "    print(f\"---- {rid} ----\")\n",
+    "\n",
+    "    # Only use examples for which the model encodes the correct relation.\n",
     "    samples = [\n",
     "        s\n",
-    "        for i, s in enumerate(samples)\n",
+    "        for i, s in sorted(\n",
+    "            enumerate(samples),\n",
+    "            key=lambda x: logp_by_relation[rid][x[0]][0].item(),\n",
+    "            reverse=True,\n",
+    "        )\n",
     "        if any(\n",
     "            pred.strip(\"ĠĊ \").lower()\n",
     "            in\n",
     "            s[\"source\"][\"requested_rewrite\"][\"target_true\"][\"str\"].lower()\n",
-    "            for pred in preds_by_relation[rid][i][:3]\n",
+    "            for pred in preds_by_relation[rid][i][:1]\n",
     "            if pred.strip(\"ĠĊ \").lower()\n",
     "        )\n",
     "    ]\n",
     "    print(f\"{len(samples)} known samples\")\n",
     "\n",
-    "    trains = samples[:5]\n",
-    "    tests = samples[5:55]\n",
+    "    # When picking training examples, choose a diverse set of labels.\n",
+    "    trains = []\n",
+    "    tests = []\n",
+    "    seen = set()\n",
+    "    for sample in samples:\n",
+    "        label = sample[\"source\"][\"requested_rewrite\"][\"target_true\"][\"str\"]\n",
+    "        if len(trains) >= n_train:\n",
+    "            if len(tests) < n_test:\n",
+    "                tests.append(sample)\n",
+    "            continue\n",
+    "        elif label not in seen:\n",
+    "            trains.append(sample)\n",
+    "            seen.add(label)\n",
+    "        else:\n",
+    "            tests.append(sample)\n",
     "\n",
-    "    operators = []\n",
-    "    for train in tqdm(trains, desc=\"train\"):\n",
-    "        operator = estimate.estimate_relation_operator(\n",
-    "            model=model,\n",
-    "            tokenizer=tokenizer,\n",
-    "            relation=train[\"source\"][\"requested_rewrite\"][\"prompt\"],\n",
-    "            subject=train[\"source\"][\"requested_rewrite\"][\"subject\"],\n",
-    "            layer=layer,\n",
-    "            device=device,\n",
+    "    # Pick best relation text via heuristic\n",
+    "    if rid in relation_templates:\n",
+    "        relation = relation_templates[rid]\n",
+    "    else:\n",
+    "        #         continue\n",
+    "        # Pick by heuristic\n",
+    "        rs0 = [\n",
+    "            sample[\"source\"][\"requested_rewrite\"][\"prompt\"]\n",
+    "            for sample in samples\n",
+    "        ]\n",
+    "        # Always prefer one that puts the subject first:\n",
+    "        rs1 = [r for r in rs0 if r.startswith(\"{}\")]\n",
+    "        # Then, prefer one with no special punctuation:\n",
+    "        rs2 = [r for r in rs1 if not any(x in r for x in \"?,:;.\")]\n",
+    "        # Then prefer the longest one:\n",
+    "        rs3 = sorted(rs2, key=lambda r: len(r), reverse=True)\n",
+    "        relation = None\n",
+    "        for rs in (rs3, rs2, rs1, rs0):\n",
+    "            if rs:\n",
+    "                relation = rs[0]\n",
+    "                break\n",
+    "        assert relation is not None\n",
+    "\n",
+    "    batch = [\n",
+    "        (\n",
+    "            train[\"source\"][\"requested_rewrite\"][\"subject\"],\n",
+    "            train[\"source\"][\"requested_rewrite\"][\"target_true\"][\"str\"]\n",
     "        )\n",
-    "        operators.append(operator)\n",
-    "    \n",
-    "    operator_a = estimate.RelationOperator(\n",
+    "        for train in trains\n",
+    "    ]\n",
+    "    print(relation)\n",
+    "    print(batch)\n",
+    "    print(len(tests), \"test examples\")\n",
+    "#     continue\n",
+    "#     print([t[\"source\"][\"requested_rewrite\"][\"prompt\"] for t in trains])\n",
+    "#     continue\n",
+    "\n",
+    "    operator_a, _ = estimate.relation_operator_from_batch(\n",
     "        model=model,\n",
     "        tokenizer=tokenizer,\n",
-    "        relation=trains[0][\"source\"][\"requested_rewrite\"][\"prompt\"],\n",
-    "        weight=torch.stack([o.weight for o in operators]).mean(dim=0),\n",
-    "        bias=torch.stack([o.bias for o in operators]).mean(dim=0),\n",
+    "        relation=relation,\n",
+    "        samples=batch,\n",
     "        layer=layer,\n",
+    "        device=device,\n",
     "    )\n",
     "\n",
     "    correct_by_k = defaultdict(int)\n",
@@ -207,12 +270,15 @@
     "        preds = operator_a(subject, device=device, return_top_k=5)\n",
     "        for k in (1, 3, 5):\n",
     "            actuals = [p.strip(\"ĠĊ \").lower() for p in preds[:k]]\n",
-    "            correct_by_k[k] += expected.lower() in actuals\n",
+    "            correct_by_k[k] += any(\n",
+    "                expected.lower().strip().startswith(actual)\n",
+    "                for actual in actuals\n",
+    "            )\n",
     "\n",
-    "    accs_by_relation[rid] = {\n",
-    "        k: correct / len(tests)\n",
-    "        for k, correct in correct_by_k.items()\n",
-    "    }"
+    "    for k in (1, 3, 5):\n",
+    "        accuracy = correct_by_k[k] / len(tests)\n",
+    "        print(f\"top-{k} accuracy: {accuracy:.2f}\")\n",
+    "        accs_by_relation[rid][k] = accuracy"
    ]
   },
   {
@@ -222,7 +288,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "accs_by_relation"
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "plt."
    ]
   },
   {
@@ -254,7 +322,7 @@
     "        sample[\"source\"][\"requested_rewrite\"][\"prompt\"]\n",
     "        for sample in samples\n",
     "    ]\n",
-    "{rid: prompts for rid, prompts in prompts_by_relation.items()}"
+    "{rid: prompts[0] for rid, prompts in prompts_by_relation.items()}"
    ]
   },
   {
