More eval updates.

--- a/notebooks/eval.ipynb
+++ b/notebooks/eval.ipynb
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73b50a8b",
+   "id": "20245480",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
     "\n",
     "layer = 15\n",
     "n_train = 5\n",
-    "n_test = 50\n",
+    "n_test = 150\n",
     "\n",
     "\n",
     "relation_templates = {\n",
@@ -166,14 +166,15 @@
     "    \"P176\": \"{} is developed by the company\",\n",
     "    \"P413\": \"In their sport, {} plays the position of\",\n",
     "    \"P39\": \"{} has the occupation of\",\n",
-    "    \"P407\": \"{} was written in the language of\",\n",
-    "    \"P101\": \"{} works in the field of\",\n",
+    "    \"P407\": \"{} is written in the language of\",\n",
+    "    \"P101\": \"{} is associated with the field of\",\n",
     "    \"P1412\": \"{} speaks the language of\",\n",
     "    \"P27\": \"{} is originally from the country of\",\n",
     "    \"P106\": \"{} has the occupation of\",\n",
-    "    \"P136\": \"{} is most commonly associated with the genre of\",\n",
+    "    \"P136\": \"{} is associated with the genre of\",\n",
     "    \"P159\": \"{} is based in the city of\",\n",
     "    \"P276\": \"{} is located in the city of\",\n",
+    "    \"P36\": \"{} has the capitol city of\",\n",
     "}\n",
     "\n",
     "\n",
@@ -192,7 +193,7 @@
     "        if any(\n",
     "            pred.strip(\"ĠĊ \").lower()\n",
     "            in\n",
-    "            s[\"source\"][\"requested_rewrite\"][\"target_true\"][\"str\"].lower()\n",
+    "            s[\"source\"][\"requested_rewrite\"][\"target_true\"][\"str\"].strip().lower()\n",
     "            for pred in preds_by_relation[rid][i][:1]\n",
     "            if pred.strip(\"ĠĊ \").lower()\n",
     "        )\n",
@@ -282,15 +283,160 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "02dfd67d",
+   "metadata": {},
+   "source": [
+    "Cases to analyze:\n",
+    "- P176: \"is developed by\"; how come we get zero accuracy?\n",
+    "- P413: Which prompt is a good one?\n",
+    "- P190: Sister city...why so bad?\n",
+    "- P136: What is going on with this relation? What is it supposed to be?\n",
+    "- P1412: Why is this different from the other language speaking one?\n",
+    "- P140, P103: What is the top-1 token?\n",
+    "\n",
+    "**Nasty**: Copy paste above to compute baselines."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11cff12b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import Counter\n",
+    "\n",
+    "baseline_by_relation = {}\n",
+    "for rid, samples in samples_by_relation.items():\n",
+    "    print(f\"---- {rid} ----\")\n",
+    "\n",
+    "    # Only use examples for which the model encodes the correct relation.\n",
+    "    samples = [\n",
+    "        s\n",
+    "        for i, s in sorted(\n",
+    "            enumerate(samples),\n",
+    "            key=lambda x: logp_by_relation[rid][x[0]][0].item(),\n",
+    "            reverse=True,\n",
+    "        )\n",
+    "        if any(\n",
+    "            pred.strip(\"ĠĊ \").lower()\n",
+    "            in\n",
+    "            s[\"source\"][\"requested_rewrite\"][\"target_true\"][\"str\"].lower()\n",
+    "            for pred in preds_by_relation[rid][i][:1]\n",
+    "            if pred.strip(\"ĠĊ \").lower()\n",
+    "        )\n",
+    "    ]\n",
+    "    print(f\"{len(samples)} known samples\")\n",
+    "\n",
+    "    # When picking training examples, choose a diverse set of labels.\n",
+    "    trains = []\n",
+    "    tests = []\n",
+    "    seen = set()\n",
+    "    for sample in samples:\n",
+    "        label = sample[\"source\"][\"requested_rewrite\"][\"target_true\"][\"str\"]\n",
+    "        if len(trains) >= n_train:\n",
+    "            if len(tests) < n_test:\n",
+    "                tests.append(sample)\n",
+    "            continue\n",
+    "        elif label not in seen:\n",
+    "            trains.append(sample)\n",
+    "            seen.add(label)\n",
+    "        else:\n",
+    "            tests.append(sample)\n",
+    "\n",
+    "    # Pick best relation text via heuristic\n",
+    "    if rid in relation_templates:\n",
+    "        relation = relation_templates[rid]\n",
+    "    else:\n",
+    "        #         continue\n",
+    "        # Pick by heuristic\n",
+    "        rs0 = [\n",
+    "            sample[\"source\"][\"requested_rewrite\"][\"prompt\"]\n",
+    "            for sample in samples\n",
+    "        ]\n",
+    "        # Always prefer one that puts the subject first:\n",
+    "        rs1 = [r for r in rs0 if r.startswith(\"{}\")]\n",
+    "        # Then, prefer one with no special punctuation:\n",
+    "        rs2 = [r for r in rs1 if not any(x in r for x in \"?,:;.\")]\n",
+    "        # Then prefer the longest one:\n",
+    "        rs3 = sorted(rs2, key=lambda r: len(r), reverse=True)\n",
+    "        relation = None\n",
+    "        for rs in (rs3, rs2, rs1, rs0):\n",
+    "            if rs:\n",
+    "                relation = rs[0]\n",
+    "                break\n",
+    "        assert relation is not None\n",
+    "\n",
+    "    batch = [\n",
+    "        (\n",
+    "            train[\"source\"][\"requested_rewrite\"][\"subject\"],\n",
+    "            train[\"source\"][\"requested_rewrite\"][\"target_true\"][\"str\"]\n",
+    "        )\n",
+    "        for train in trains\n",
+    "    ]\n",
+    "    print(relation)\n",
+    "    print(batch)\n",
+    "    print(len(tests), \"test examples\")\n",
+    "\n",
+    "    label = Counter([sample[\"source\"][\"requested_rewrite\"][\"target_true\"][\"str\"] for sample in samples]).most_common()[0][0]\n",
+    "    print(\"Majority=\", label)\n",
+    "    correct = 0\n",
+    "    for test in tqdm(samples, desc=\"test\"):\n",
+    "        expected = test[\"source\"][\"requested_rewrite\"][\"target_true\"][\"str\"]\n",
+    "        correct += expected.strip().lower() == label.strip().lower()\n",
+    "    \n",
+    "    accuracy = correct / len(samples)\n",
+    "    print(f\"accuracy={accuracy:.2f}\")\n",
+    "    baseline_by_relation[rid] = accuracy"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "feb6d91c",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
     "\n",
-    "plt."
+    "\n",
+    "xys = sorted(accs_by_relation.items(), key=lambda kv: kv[-1][3], reverse=True)\n",
+    "\n",
+    "banned = {\n",
+    "    # Too few examples\n",
+    "    \"P463\",\n",
+    "    \"P264\",\n",
+    "    # Really weird; mostly jazz? What is this one?\n",
+    "    \"P136\",\n",
+    "}\n",
+    "xys = [(x, y) for x, y in xys if x not in banned]\n",
+    "\n",
+    "xs = [rid for rid, _ in xys]\n",
+    "ys = [scores[3] for _, scores in xys]\n",
+    "zs = [baseline_by_relation[rid] for rid in xs]\n",
+    "\n",
+    "x = np.arange(len(xs))\n",
+    "width = 0.35  # the width of the bars\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(15, 3))\n",
+    "ours = ax.bar(x - width / 2, ys, width, label=\"Estimate J/b\")\n",
+    "baseline = ax.bar(x + width / 2, zs, width, label=\"Majority vote\")\n",
+    "ax.set_xticks(x, xs)\n",
+    "ax.legend()\n",
+    "fig.tight_layout()\n",
+    "\n",
+    "plt.title(\"top-3 accuracy by relation\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "36defb21",
+   "metadata": {},
+   "source": [
+    "# What is going on?"
    ]
   },
   {
@@ -306,7 +452,7 @@
     "        sample[\"source\"][\"requested_rewrite\"][\"target_true\"][\"str\"]\n",
     "        for sample in samples\n",
     "    }\n",
-    "{rid: len(targets) for rid, targets in targets_by_relation.items()}"
+    "{rid: targets for rid, targets in targets_by_relation.items()}[\"P39\"]"
    ]
   },
   {
@@ -322,13 +468,70 @@
     "        sample[\"source\"][\"requested_rewrite\"][\"prompt\"]\n",
     "        for sample in samples\n",
     "    ]\n",
-    "{rid: prompts[0] for rid, prompts in prompts_by_relation.items()}"
+    "{rid: prompts for rid, prompts in prompts_by_relation.items()}[\"P176\"]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "563bed79",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# rid = \"P176\"\n",
+    "# relation = \"{} was developed by\"\n",
+    "# trained_on = [\n",
+    "#     ('Microsoft Band', 'Microsoft'),\n",
+    "#     ('Kindle Fire', 'Amazon'),\n",
+    "#     ('Sony NEX-5', 'Sony'),\n",
+    "#     ('Chromecast', 'Google'),\n",
+    "#     ('Nintendo Entertainment System', 'Nintendo'),\n",
+    "# ]\n",
+    "\n",
+    "\n",
+    "rid = \"P1412\"\n",
+    "relation = \"{} primarily spoke the language of\"\n",
+    "trained_on = [\n",
+    "    ('Juan Bautista de Anza', 'Spanish'),\n",
+    "    ('Glamourina', 'Ukrainian'),\n",
+    "    ('Francesc Eiximenis', 'Catalan'),\n",
+    "    ('Milo Manara', 'Italian'),\n",
+    "    ('Aleksandar Zograf', 'Serbian'),\n",
+    "]\n",
+    "\n",
+    "tests = [\n",
+    "    (\n",
+    "        s[\"source\"][\"requested_rewrite\"][\"subject\"],\n",
+    "        s[\"source\"][\"requested_rewrite\"][\"target_true\"][\"str\"],\n",
+    "    )\n",
+    "    for s in samples_by_relation[rid]\n",
+    "]\n",
+    "\n",
+    "operator, _ = estimate.relation_operator_from_batch(\n",
+    "    model,\n",
+    "    tokenizer,\n",
+    "    trained_on,\n",
+    "    relation,\n",
+    "    device=device)\n",
+    "\n",
+    "# Logit lens for b.\n",
+    "logits = model.lm_head(model.transformer.ln_f(operator.bias[None]))\n",
+    "ids = logits.topk(k=5, dim=-1).indices\n",
+    "tokens = tokenizer.convert_ids_to_tokens(ids.squeeze().tolist())\n",
+    "print(\"LOGIT LENS\", tokens)\n",
+    "\n",
+    "correct = 0\n",
+    "for subject, target in tests:\n",
+    "    predictions = operator(subject, device=device)\n",
+    "    print(subject, f\"preds={predictions}\", f\"target={target}\")\n",
+    "    correct += any(p.strip(\"Ġ \") in target for p in predictions)\n",
+    "print(f\"{correct / len(tests):.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96f4c6e7",
    "metadata": {},
    "outputs": [],
    "source": []
