--- a/scan-for-best/average_good_cases.ipynb
+++ b/scan-for-best/average_good_cases.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -21,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,11 +32,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "MODEL_NAME = \"gpt2-xl\"  # gpt2-{medium,large,xl} or EleutherAI/gpt-j-6B\n",
+    "MODEL_NAME = \"gpt2-medium\"  # gpt2-{medium,large,xl} or EleutherAI/gpt-j-6B\n",
     "mt = model_utils.ModelAndTokenizer(MODEL_NAME, low_cpu_mem_usage=False)\n",
     "\n",
     "model = mt.model\n",
@@ -55,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,9 +67,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "LookupError",
+     "evalue": "transformer.h.25",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mLookupError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m space_needle \u001b[39m=\u001b[39m estimate\u001b[39m.\u001b[39;49mestimate_relation_operator(\n\u001b[1;32m      2\u001b[0m     model,\n\u001b[1;32m      3\u001b[0m     tokenizer,\n\u001b[1;32m      4\u001b[0m     \u001b[39m\"\u001b[39;49m\u001b[39mThe Space Needle\u001b[39;49m\u001b[39m\"\u001b[39;49m,\n\u001b[1;32m      5\u001b[0m     \u001b[39m\"\u001b[39;49m\u001b[39m{}\u001b[39;49;00m\u001b[39m is located in the country of\u001b[39;49m\u001b[39m\"\u001b[39;49m,\n\u001b[1;32m      6\u001b[0m     layer\u001b[39m=\u001b[39;49m\u001b[39m25\u001b[39;49m,\n\u001b[1;32m      7\u001b[0m     device\u001b[39m=\u001b[39;49mmodel\u001b[39m.\u001b[39;49mdevice,\n\u001b[1;32m      8\u001b[0m )\n",
+      "File \u001b[0;32m~/Codes/relations/scan-for-best/../relations/estimate.py:229\u001b[0m, in \u001b[0;36mestimate_relation_operator\u001b[0;34m(model, tokenizer, subject, relation, subject_token_index, layer, device, calculate_at_lnf, consider_residual, approximate_rank)\u001b[0m\n\u001b[1;32m    226\u001b[0m n_layer \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mnum_hidden_layers\u001b[39m\u001b[39m\"\u001b[39m \u001b[39mif\u001b[39;00m \u001b[39mhasattr\u001b[39m(model\u001b[39m.\u001b[39mconfig, \u001b[39m\"\u001b[39m\u001b[39mnum_hidden_layers\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39melse\u001b[39;00m \u001b[39m\"\u001b[39m\u001b[39mn_layer\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    227\u001b[0m z_layer_name \u001b[39m=\u001b[39m \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mtransformer.h.\u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mgetattr\u001b[39m(model\u001b[39m.\u001b[39mconfig, n_layer) \u001b[39m-\u001b[39m \u001b[39m1\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m \u001b[39mif\u001b[39;00m calculate_at_lnf \u001b[39m==\u001b[39m \u001b[39mFalse\u001b[39;00m \u001b[39melse\u001b[39;00m \u001b[39m\"\u001b[39m\u001b[39mtransformer.ln_f\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m--> 229\u001b[0m \u001b[39mwith\u001b[39;00m baukit\u001b[39m.\u001b[39;49mTraceDict(model, (h_layer_name, z_layer_name)) \u001b[39mas\u001b[39;00m ret:\n\u001b[1;32m    230\u001b[0m     model(\u001b[39m*\u001b[39m\u001b[39m*\u001b[39minputs)\n\u001b[1;32m    232\u001b[0m h \u001b[39m=\u001b[39m ret[h_layer_name]\u001b[39m.\u001b[39moutput[\u001b[39m0\u001b[39m][\u001b[39m0\u001b[39m, h_token_index]\n",
+      "File \u001b[0;32m~/miniconda3/envs/relation/lib/python3.10/site-packages/baukit/nethook.py:164\u001b[0m, in \u001b[0;36mTraceDict.__init__\u001b[0;34m(self, module, layers, retain_output, retain_input, clone, detach, retain_grad, edit_output, stop)\u001b[0m\n\u001b[1;32m    161\u001b[0m         \u001b[39mreturn\u001b[39;00m obj\u001b[39m.\u001b[39mget(layer, \u001b[39mNone\u001b[39;00m)\n\u001b[1;32m    162\u001b[0m     \u001b[39mreturn\u001b[39;00m obj\n\u001b[0;32m--> 164\u001b[0m \u001b[39mself\u001b[39m[layer] \u001b[39m=\u001b[39m Trace(\n\u001b[1;32m    165\u001b[0m     module\u001b[39m=\u001b[39;49mmodule,\n\u001b[1;32m    166\u001b[0m     layer\u001b[39m=\u001b[39;49mlayer,\n\u001b[1;32m    167\u001b[0m     retain_output\u001b[39m=\u001b[39;49moptional_dict(retain_output),\n\u001b[1;32m    168\u001b[0m     retain_input\u001b[39m=\u001b[39;49moptional_dict(retain_input),\n\u001b[1;32m    169\u001b[0m     clone\u001b[39m=\u001b[39;49moptional_dict(clone),\n\u001b[1;32m    170\u001b[0m     detach\u001b[39m=\u001b[39;49moptional_dict(detach),\n\u001b[1;32m    171\u001b[0m     retain_grad\u001b[39m=\u001b[39;49moptional_dict(retain_grad),\n\u001b[1;32m    172\u001b[0m     edit_output\u001b[39m=\u001b[39;49moptional_dict(edit_output),\n\u001b[1;32m    173\u001b[0m     stop\u001b[39m=\u001b[39;49mstop \u001b[39mand\u001b[39;49;00m is_last,\n\u001b[1;32m    174\u001b[0m )\n",
+      "File \u001b[0;32m~/miniconda3/envs/relation/lib/python3.10/site-packages/baukit/nethook.py:69\u001b[0m, in \u001b[0;36mTrace.__init__\u001b[0;34m(self, module, layer, retain_output, retain_input, clone, detach, retain_grad, edit_output, stop)\u001b[0m\n\u001b[1;32m     67\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlayer \u001b[39m=\u001b[39m layer\n\u001b[1;32m     68\u001b[0m \u001b[39mif\u001b[39;00m layer \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m---> 69\u001b[0m     module \u001b[39m=\u001b[39m get_module(module, layer)\n\u001b[1;32m     71\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mretain_hook\u001b[39m(m, inputs, output):\n\u001b[1;32m     72\u001b[0m     \u001b[39mif\u001b[39;00m edit_output:\n",
+      "File \u001b[0;32m~/miniconda3/envs/relation/lib/python3.10/site-packages/baukit/nethook.py:368\u001b[0m, in \u001b[0;36mget_module\u001b[0;34m(model, name)\u001b[0m\n\u001b[1;32m    366\u001b[0m     \u001b[39mif\u001b[39;00m n \u001b[39m==\u001b[39m name:\n\u001b[1;32m    367\u001b[0m         \u001b[39mreturn\u001b[39;00m m\n\u001b[0;32m--> 368\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mLookupError\u001b[39;00m(name)\n",
+      "\u001b[0;31mLookupError\u001b[0m: transformer.h.25"
+     ]
+    }
+   ],
    "source": [
     "space_needle = estimate.estimate_relation_operator(\n",
     "    model,\n",
@@ -92,9 +99,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GPT2Config {\n",
+       "  \"_name_or_path\": \"gpt2-medium\",\n",
+       "  \"activation_function\": \"gelu_new\",\n",
+       "  \"architectures\": [\n",
+       "    \"GPT2LMHeadModel\"\n",
+       "  ],\n",
+       "  \"attn_pdrop\": 0.1,\n",
+       "  \"bos_token_id\": 50256,\n",
+       "  \"embd_pdrop\": 0.1,\n",
+       "  \"eos_token_id\": 50256,\n",
+       "  \"initializer_range\": 0.02,\n",
+       "  \"layer_norm_epsilon\": 1e-05,\n",
+       "  \"model_type\": \"gpt2\",\n",
+       "  \"n_ctx\": 1024,\n",
+       "  \"n_embd\": 1024,\n",
+       "  \"n_head\": 16,\n",
+       "  \"n_inner\": null,\n",
+       "  \"n_layer\": 24,\n",
+       "  \"n_positions\": 1024,\n",
+       "  \"n_special\": 0,\n",
+       "  \"predict_special_tokens\": true,\n",
+       "  \"reorder_and_upcast_attn\": false,\n",
+       "  \"resid_pdrop\": 0.1,\n",
+       "  \"scale_attn_by_inverse_layer_idx\": false,\n",
+       "  \"scale_attn_weights\": true,\n",
+       "  \"summary_activation\": null,\n",
+       "  \"summary_first_dropout\": 0.1,\n",
+       "  \"summary_proj_to_labels\": true,\n",
+       "  \"summary_type\": \"cls_index\",\n",
+       "  \"summary_use_proj\": true,\n",
+       "  \"task_specific_params\": {\n",
+       "    \"text-generation\": {\n",
+       "      \"do_sample\": true,\n",
+       "      \"max_length\": 50\n",
+       "    }\n",
+       "  },\n",
+       "  \"transformers_version\": \"4.24.0\",\n",
+       "  \"use_cache\": true,\n",
+       "  \"vocab_size\": 50257\n",
+       "}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "LookupError",
+     "evalue": "transformer.h.25",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mLookupError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[9], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m men_park \u001b[39m=\u001b[39m estimate\u001b[39m.\u001b[39;49mestimate_relation_operator(\n\u001b[1;32m      2\u001b[0m     model,\n\u001b[1;32m      3\u001b[0m     tokenizer,\n\u001b[1;32m      4\u001b[0m     \u001b[39m\"\u001b[39;49m\u001b[39mMenangle Park\u001b[39;49m\u001b[39m\"\u001b[39;49m,\n\u001b[1;32m      5\u001b[0m     \u001b[39m\"\u001b[39;49m\u001b[39m{}\u001b[39;49;00m\u001b[39m is located in the country of\u001b[39;49m\u001b[39m\"\u001b[39;49m,\n\u001b[1;32m      6\u001b[0m     subject_token_index\u001b[39m=\u001b[39;49m\u001b[39m1\u001b[39;49m,\n\u001b[1;32m      7\u001b[0m     layer\u001b[39m=\u001b[39;49m\u001b[39m25\u001b[39;49m,\n\u001b[1;32m      8\u001b[0m     device\u001b[39m=\u001b[39;49mmodel\u001b[39m.\u001b[39;49mdevice,\n\u001b[1;32m      9\u001b[0m )\n",
+      "File \u001b[0;32m~/Codes/relations/scan-for-best/../relations/estimate.py:229\u001b[0m, in \u001b[0;36mestimate_relation_operator\u001b[0;34m(model, tokenizer, subject, relation, subject_token_index, layer, device, calculate_at_lnf, consider_residual, approximate_rank)\u001b[0m\n\u001b[1;32m    226\u001b[0m n_layer \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mnum_hidden_layers\u001b[39m\u001b[39m\"\u001b[39m \u001b[39mif\u001b[39;00m \u001b[39mhasattr\u001b[39m(model\u001b[39m.\u001b[39mconfig, \u001b[39m\"\u001b[39m\u001b[39mnum_hidden_layers\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39melse\u001b[39;00m \u001b[39m\"\u001b[39m\u001b[39mn_layer\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    227\u001b[0m z_layer_name \u001b[39m=\u001b[39m \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mtransformer.h.\u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mgetattr\u001b[39m(model\u001b[39m.\u001b[39mconfig, n_layer) \u001b[39m-\u001b[39m \u001b[39m1\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m \u001b[39mif\u001b[39;00m calculate_at_lnf \u001b[39m==\u001b[39m \u001b[39mFalse\u001b[39;00m \u001b[39melse\u001b[39;00m \u001b[39m\"\u001b[39m\u001b[39mtransformer.ln_f\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m--> 229\u001b[0m \u001b[39mwith\u001b[39;00m baukit\u001b[39m.\u001b[39;49mTraceDict(model, (h_layer_name, z_layer_name)) \u001b[39mas\u001b[39;00m ret:\n\u001b[1;32m    230\u001b[0m     model(\u001b[39m*\u001b[39m\u001b[39m*\u001b[39minputs)\n\u001b[1;32m    232\u001b[0m h \u001b[39m=\u001b[39m ret[h_layer_name]\u001b[39m.\u001b[39moutput[\u001b[39m0\u001b[39m][\u001b[39m0\u001b[39m, h_token_index]\n",
+      "File \u001b[0;32m~/miniconda3/envs/relation/lib/python3.10/site-packages/baukit/nethook.py:164\u001b[0m, in \u001b[0;36mTraceDict.__init__\u001b[0;34m(self, module, layers, retain_output, retain_input, clone, detach, retain_grad, edit_output, stop)\u001b[0m\n\u001b[1;32m    161\u001b[0m         \u001b[39mreturn\u001b[39;00m obj\u001b[39m.\u001b[39mget(layer, \u001b[39mNone\u001b[39;00m)\n\u001b[1;32m    162\u001b[0m     \u001b[39mreturn\u001b[39;00m obj\n\u001b[0;32m--> 164\u001b[0m \u001b[39mself\u001b[39m[layer] \u001b[39m=\u001b[39m Trace(\n\u001b[1;32m    165\u001b[0m     module\u001b[39m=\u001b[39;49mmodule,\n\u001b[1;32m    166\u001b[0m     layer\u001b[39m=\u001b[39;49mlayer,\n\u001b[1;32m    167\u001b[0m     retain_output\u001b[39m=\u001b[39;49moptional_dict(retain_output),\n\u001b[1;32m    168\u001b[0m     retain_input\u001b[39m=\u001b[39;49moptional_dict(retain_input),\n\u001b[1;32m    169\u001b[0m     clone\u001b[39m=\u001b[39;49moptional_dict(clone),\n\u001b[1;32m    170\u001b[0m     detach\u001b[39m=\u001b[39;49moptional_dict(detach),\n\u001b[1;32m    171\u001b[0m     retain_grad\u001b[39m=\u001b[39;49moptional_dict(retain_grad),\n\u001b[1;32m    172\u001b[0m     edit_output\u001b[39m=\u001b[39;49moptional_dict(edit_output),\n\u001b[1;32m    173\u001b[0m     stop\u001b[39m=\u001b[39;49mstop \u001b[39mand\u001b[39;49;00m is_last,\n\u001b[1;32m    174\u001b[0m )\n",
+      "File \u001b[0;32m~/miniconda3/envs/relation/lib/python3.10/site-packages/baukit/nethook.py:69\u001b[0m, in \u001b[0;36mTrace.__init__\u001b[0;34m(self, module, layer, retain_output, retain_input, clone, detach, retain_grad, edit_output, stop)\u001b[0m\n\u001b[1;32m     67\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlayer \u001b[39m=\u001b[39m layer\n\u001b[1;32m     68\u001b[0m \u001b[39mif\u001b[39;00m layer \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m---> 69\u001b[0m     module \u001b[39m=\u001b[39m get_module(module, layer)\n\u001b[1;32m     71\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mretain_hook\u001b[39m(m, inputs, output):\n\u001b[1;32m     72\u001b[0m     \u001b[39mif\u001b[39;00m edit_output:\n",
+      "File \u001b[0;32m~/miniconda3/envs/relation/lib/python3.10/site-packages/baukit/nethook.py:368\u001b[0m, in \u001b[0;36mget_module\u001b[0;34m(model, name)\u001b[0m\n\u001b[1;32m    366\u001b[0m     \u001b[39mif\u001b[39;00m n \u001b[39m==\u001b[39m name:\n\u001b[1;32m    367\u001b[0m         \u001b[39mreturn\u001b[39;00m m\n\u001b[0;32m--> 368\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mLookupError\u001b[39;00m(name)\n",
+      "\u001b[0;31mLookupError\u001b[0m: transformer.h.25"
+     ]
+    }
+   ],
    "source": [
     "men_park = estimate.estimate_relation_operator(\n",
     "    model,\n",
