Push most recent eval nb.

--- a/notebooks/eval.ipynb
+++ b/notebooks/eval.ipynb
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20245480",
+   "id": "f16667a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02dfd67d",
+   "id": "b724eebc",
    "metadata": {},
    "source": [
     "Cases to analyze:\n",
@@ -301,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11cff12b",
+   "id": "33273947",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36defb21",
+   "id": "2c6ae758",
    "metadata": {},
    "source": [
     "# What is going on?"
@@ -489,15 +489,25 @@
     "# ]\n",
     "\n",
     "\n",
-    "rid = \"P1412\"\n",
-    "relation = \"{} primarily spoke the language of\"\n",
+    "# rid = \"P1412\"\n",
+    "# relation = \"{} primarily spoke the language of\"\n",
+    "# trained_on = [\n",
+    "#     ('Juan Bautista de Anza', 'Spanish'),\n",
+    "#     ('Glamourina', 'Ukrainian'),\n",
+    "#     ('Francesc Eiximenis', 'Catalan'),\n",
+    "#     ('Milo Manara', 'Italian'),\n",
+    "#     ('Aleksandar Zograf', 'Serbian'),\n",
+    "# ]\n",
+    "\n",
+    "rid = \"P103\"\n",
     "trained_on = [\n",
-    "    ('Juan Bautista de Anza', 'Spanish'),\n",
-    "    ('Glamourina', 'Ukrainian'),\n",
-    "    ('Francesc Eiximenis', 'Catalan'),\n",
-    "    ('Milo Manara', 'Italian'),\n",
-    "    ('Aleksandar Zograf', 'Serbian'),\n",
+    "    ('C. N. Annadurai', 'Tamil'),\n",
+    "    ('Audrey Tautou', 'French'),\n",
+    "    ('Sergey Lavrov', 'Russian'),\n",
+    "    ('Cees Nooteboom', 'Dutch'),\n",
+    "    ('Shakira', 'Spanish'),\n",
     "]\n",
+    "relation = \"{} speaks the langauge of\"\n",
     "\n",
     "tests = [\n",
     "    (\n",
@@ -507,12 +517,15 @@
     "    for s in samples_by_relation[rid]\n",
     "]\n",
     "\n",
-    "operator, _ = estimate.relation_operator_from_batch(\n",
-    "    model,\n",
-    "    tokenizer,\n",
-    "    trained_on,\n",
-    "    relation,\n",
-    "    device=device)\n",
+    "# operator, _ = estimate.relation_operator_from_batch(\n",
+    "#     model,\n",
+    "#     tokenizer,\n",
+    "#     trained_on,\n",
+    "#     relation,\n",
+    "#     device=device)\n",
+    "operator.weight.data[:] = torch.eye(len(operator.weight.data), device=device,\n",
+    "                                    dtype=torch.float16)\n",
+    "operator.bias.data[:] = 0\n",
     "\n",
     "# Logit lens for b.\n",
     "logits = model.lm_head(model.transformer.ln_f(operator.bias[None]))\n",
@@ -531,7 +544,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96f4c6e7",
+   "id": "80b88ec2",
    "metadata": {},
    "outputs": [],
    "source": []
