added some critical cases for averaging

--- a/scan-for-best/JB_analysis.ipynb
+++ b/scan-for-best/JB_analysis.ipynb
@@ -12,14 +12,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
     "import numpy as np\n",
     "import json\n",
-    "from tqdm import tqdm\n",
+    "from tqdm.auto import tqdm\n",
     "\n",
     "import os\n",
     "import sys\n",
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,11 +67,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "test_cases = [\n",
+    "    (\"The Space Needle\", -1, \"United States\"),\n",
     "    (\"The Great Wall\", -1, \"China\"),\n",
     "    (\"Niagara Falls\", -2, \"Canada\"),\n",
     "    (\"Valdemarsvik\", -1, \"Sweden\"),\n",
@@ -82,12 +83,17 @@
     "    (\"Mahalangur Himal\", -1, \"Nepal\"),\n",
     "    (\"Higashikagawa\", -1, \"Japan\"),\n",
     "    (\"Trento\", -1, \"Italy\"),\n",
-    "    (\"Taj Mahal\", -1, \"India\")\n",
+    "    (\"Taj Mahal\", -1, \"India\"),\n",
+    "    (\"Hagia Sophia\", -1, \"Turkey\"),\n",
+    "    (\"Colosseum\", -1, \"Italy\"),\n",
+    "    (\"Mount Everest\", -1, \"Nepal\")\n",
+    "    (\"Valencia\", -1, \"Spain\")\n",
+    "    (\"Lake Baikal\", -1, \"Russia\")\n",
     "]\n",
     "\n",
-    "def check_with_test_cases(relation_operator):\n",
+    "def evaluate_against_test_cases(relation):\n",
     "    for subject, subject_token_index, target in test_cases:\n",
-    "        objects = relation_operator(\n",
+    "        objects = relation(\n",
     "            subject,\n",
     "            subject_token_index=subject_token_index,\n",
     "            device=model.device,\n",
@@ -132,6 +138,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "The Space Needle, target: United States   ==>   predicted: [' Seattle', ' Washington', ' the', ' Sweden', ' America']\n",
       "The Great Wall, target: China   ==>   predicted: [' China', ' Seattle', ' Beijing', ' Taiwan', ' Japan']\n",
       "Niagara Falls, target: Canada   ==>   predicted: [' Niagara', ' Canada', 'Ni', ' New', ' Ontario']\n",
       "Valdemarsvik, target: Sweden   ==>   predicted: [' Sweden', ' Seattle', ' Washington', ' Scandinav', ' Swedish']\n",
@@ -142,12 +149,15 @@
       "Mahalangur Himal, target: Nepal   ==>   predicted: [' Nepal', ' Seattle', ' Washington', ' Bh', ' Switzerland']\n",
       "Higashikagawa, target: Japan   ==>   predicted: [' Japan', ' Tokyo', ' Seattle', ' Osaka', ' Kyoto']\n",
       "Trento, target: Italy   ==>   predicted: [' Italy', ' Seattle', ' Washington', ' Sweden', ' Switzerland']\n",
-      "Taj Mahal, target: India   ==>   predicted: [' Seattle', ' Washington', ' the', ' Sultan', ' Wa']\n"
+      "Taj Mahal, target: India   ==>   predicted: [' Seattle', ' Washington', ' the', ' Sultan', ' Wa']\n",
+      "Hagia Sophia, target: Turkey   ==>   predicted: [' Turkey', ' Seattle', ' Istanbul', ' Sweden', ' Ankara']\n",
+      "Colosseum, target: Italy   ==>   predicted: [' Italy', ' Seattle', ' Rome', ' the', ' Venice']\n",
+      "Mount Everest, target: Nepal   ==>   predicted: [' Mount', ' Nepal', ' Mt', ' Seattle', ' Switzerland']\n"
      ]
     }
    ],
    "source": [
-    "check_with_test_cases(space_needle)"
+    "evaluate_against_test_cases(space_needle)"
    ]
   },
   {
@@ -1238,6 +1248,182 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Testing $J$ as *identity*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "####################################################\n",
+    "sos = (\n",
+    "    (\"The Great Wall\", -1, \"China\"),\n",
+    "    (\"Niagara Falls\", -2, \"Canada\"),\n",
+    "    (\"Ginza\", -1, \"Japan\"),\n",
+    ")\n",
+    "r = \"{} is located in the country of\"\n",
+    "####################################################"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "713bdb933d794156b23ef253a7c99589",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/3 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ginza is located in the country of Japan.\n",
+      "Niagara Falls is located in the country of Canada.\n",
+      "{} is located in the country of\n",
+      "Ginza is located in the country of Japan.\n",
+      "The Great Wall is located in the country of China.\n",
+      "{} is located in the country of\n",
+      "The Great Wall is located in the country of China.\n",
+      "Niagara Falls is located in the country of Canada.\n",
+      "{} is located in the country of\n"
+     ]
+    }
+   ],
+   "source": [
+    "jbs = []\n",
+    "for s, s_idx, o in tqdm(sos):\n",
+    "    others = set(sos) - {(s, s_idx, o)}\n",
+    "    prompt = \"\"\n",
+    "    prompt += \"\\n\".join(r.format(s_other) + f\" {o_other}.\" for s_other, idx_other, o_other in others) + \"\\n\"\n",
+    "    prompt += r\n",
+    "    print(prompt)\n",
+    "\n",
+    "    inputs = tokenizer(prompt, return_tensors=\"pt\").to(model.device)\n",
+    "    jb = estimate.estimate_relation_operator(\n",
+    "        model, tokenizer,\n",
+    "        s, prompt,\n",
+    "        subject_token_index= s_idx,\n",
+    "        layer = 15,\n",
+    "        device = model.device,\n",
+    "    )\n",
+    "    jbs.append(jb)\n",
+    "\n",
+    "relation = estimate.RelationOperator(\n",
+    "    weight=torch.stack([jb.weight for jb in jbs]).mean(dim=0),\n",
+    "    bias=torch.stack([jb.bias for jb in jbs]).mean(dim=0),\n",
+    "    model=model,\n",
+    "    tokenizer=tokenizer,\n",
+    "    layer= 15 ,\n",
+    "    relation=r,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Space Needle, target: United States   ==>   predicted: [' Japan', ' USA', ' Canada', ' China', ' the']\n",
+      "The Great Wall, target: China   ==>   predicted: [' China', ' Japan', ' Canada', ' Taiwan', ' the']\n",
+      "Niagara Falls, target: Canada   ==>   predicted: [' Canada', ' Japan', ' Niagara', ' New', ' China']\n",
+      "Valdemarsvik, target: Sweden   ==>   predicted: [' Japan', ' China', ' Sweden', ' Canada', ' Russia']\n",
+      "Kyoto University, target: Japan   ==>   predicted: [' Japan', ' Kyoto', ' China', ' Ky', ' Canada']\n",
+      "Hattfjelldal, target: Norway   ==>   predicted: [' China', ' Japan', ' Norway', ' Canada', ' North']\n",
+      "Ginza, target: Japan   ==>   predicted: [' Japan', ' China', ' Canada', ' the', '\\n']\n",
+      "Sydney Hospital, target: Australia   ==>   predicted: [' Australia', ' China', ' Japan', ' Sydney', ' Canada']\n",
+      "Mahalangur Himal, target: Nepal   ==>   predicted: [' India', ' Nepal', ' China', ' Japan', ' Himal']\n",
+      "Higashikagawa, target: Japan   ==>   predicted: [' Japan', ' China', ' Canada', ' the', '\\n']\n",
+      "Trento, target: Italy   ==>   predicted: [' Italy', ' Japan', ' China', ' the', ' Canada']\n",
+      "Taj Mahal, target: India   ==>   predicted: [' India', ' China', ' Japan', ' Canada', ' United']\n",
+      "Hagia Sophia, target: Turkey   ==>   predicted: [' Turkey', ' Japan', ' China', ' the', '\\n']\n",
+      "Colosseum, target: Italy   ==>   predicted: [' Italy', ' Japan', ' China', ' Rome', ' United']\n",
+      "Mount Everest, target: Nepal   ==>   predicted: [' China', ' Nepal', ' Japan', ' Tibet', ' India']\n"
+     ]
+    }
+   ],
+   "source": [
+    "evaluate_against_test_cases(relation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "space_needle ==>  [' Seattle', ' Japan', ' Utah', ' Czech', ' Sweden', ' Mori', ' Singapore', ' Prague', ' Se', ' Bel']\n",
+      "Averaged ==>  [' Japan', ' China', ' Canada', ' Taiwan', ' Hungary', ' the', '\\n', ' United', ' Austria', ' Germany']\n",
+      "<class 'str'>\n",
+      "['Buda Castle is located in the country of Hungary, in the city']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'top_token': ' Hungary',\n",
+       "  'candidates': [{'token': ' Hungary', 'token_id': 19562, 'p': 0.5378},\n",
+       "   {'token': ' Romania', 'token_id': 23356, 'p': 0.0623},\n",
+       "   {'token': ' the', 'token_id': 262, 'p': 0.0347},\n",
+       "   {'token': ' Slovakia', 'token_id': 36839, 'p': 0.0301},\n",
+       "   {'token': ' Trans', 'token_id': 3602, 'p': 0.0177},\n",
+       "   {'token': ' Budapest', 'token_id': 40959, 'p': 0.0166},\n",
+       "   {'token': ' Bud', 'token_id': 10370, 'p': 0.0148},\n",
+       "   {'token': ' P', 'token_id': 350, 'p': 0.0117},\n",
+       "   {'token': ' B', 'token_id': 347, 'p': 0.0103},\n",
+       "   {'token': ' former', 'token_id': 1966, 'p': 0.0086}]}]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# test_subject = \"Merlion Park\"\n",
+    "# test_subject = \"Cape Sounion\"\n",
+    "# test_subject = \"Zagori\"\n",
+    "# test_subject = \"Cologne Cathedral\"\n",
+    "test_subject = \"Buda Castle\"\n",
+    "\n",
+    "\n",
+    "print(\"space_needle ==> \", space_needle(test_subject, device = model.device, return_top_k = 10))\n",
+    "print(\"Averaged ==> \", relation(test_subject, device = model.device, return_top_k = 10))\n",
+    "\n",
+    "generated_text, gen_dict = model_utils.generate_fast(\n",
+    "    model, tokenizer, prompts= r.format(test_subject), \n",
+    "    argmax_greedy=True, get_answer_tokens=True,\n",
+    "    max_new_tokens=5, top_k= 10\n",
+    ")\n",
+    "\n",
+    "print(generated_text)\n",
+    "gen_dict['answer']"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1261,7 +1447,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8 (main, Nov 24 2022, 14:13:03) [GCC 11.2.0]"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
